--- a/.github/workflows/telegram.yml
+++ b/.github/workflows/telegram.yml
@@ -2,9 +2,9 @@ name: Notifier
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
 
