--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -42,3 +42,15 @@ jobs:
         with:
           push: true
           tags: waltergsteven/ubuntu_node:latest
+
+  deploy_heroku:
+      runs-on: ubuntu-latest
+      needs: build
+      steps:
+        - uses: actions/checkout@v3
+        - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+          with:
+            heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+            heroku_app_name: "bootcamp-devops-waltergsteven" #Must be unique in Heroku
+            heroku_email: "walterg.steven@outlook.com"
+            usedocker: true
