FIX: need heroku

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -45,7 +45,7 @@ jobs:
 
   deploy_heroku:
       runs-on: ubuntu-latest
-      needs: build
+      needs: docker
       steps:
         - uses: actions/checkout@v3
         - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
